Fix Css scroll problem on mobile devices

--- a/src/cnb-editor/cnb-editor-log/cnb-editor-log.component.css
+++ b/src/cnb-editor/cnb-editor-log/cnb-editor-log.component.css
@@ -4,11 +4,11 @@
 }
 
 .modal-dialog {
-    height: calc(100% - 69px);
+    height: 100%;
 }
 
 .modal-content {
-    height: 100%;
+    max-height: 95%;
 }
 
 .modal-body {
