--- a/src/cnb-editor/cnb-editor-menu/cnb-editor-menu.component.css
+++ b/src/cnb-editor/cnb-editor-menu/cnb-editor-menu.component.css
@@ -4,11 +4,17 @@
 }
 
 .modal-dialog {
-	max-height: 100%;
-	overflow-y: auto;
-	overflow-x: hidden;
+    height: 100%;
+}
+
+.modal-content {
+    max-height: 100%;
+}
+
+.modal-body {
+    overflow-y: scroll;
 }
 
 .modal-header {
-	min-height: 69px;
+    min-height: 69px;
 }
